syntax = "proto3";

package api.proj;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "public/response/response.proto";
import "validate/validate.proto";

option go_package = "store/api/proj;projpb";


message AppSettings {

  string _id = 1 [json_name = '_id'];

  map<string, Prompt> prompts = 6;

  Prompt videoTemplate = 2;
  Prompt videoHighlight = 3;
  Prompt videoScript = 4;
  Prompt videoGenerate = 5;
}


message Prompt {
  string model = 1;
  string content = 2;
  int64 updatedAt = 3;
  string description = 4;
  string title = 5;
}

